--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get -y install autoconf automake build-essential libass-dev libfreetype6-dev libtheora-dev libtool libva-dev libvdpau-dev libvorbis-dev libxcb1-dev libxcb-shm0-dev libxcb-xfixes0-dev pkg-config texinfo wget zlib1g-dev
   - sudo apt-get -y install yasm nasm libmp3lame-dev
-  - pip install -r requirements.txt
-  - python test/ffmpeg_bin.py 05861434675432854607
+  - pip install tinydownload
+  - tinydownload 05861434675432854607 -o ~/bin/ffmpeg
   - chmod 755 ~/bin/ffmpeg
 install:
   - ffmpeg -h
