--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-matrix:
-    include:
-        - language: rust
-        - language: python
+language: python
+python: 3.6
 script: python3 script.py
