--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,20 @@
 language: python
-python: 3.6
+python: "2.7"
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get -y install autoconf automake build-essential libass-dev libfreetype6-dev libtheora-dev libtool libva-dev libvdpau-dev libvorbis-dev libxcb1-dev libxcb-shm0-dev libxcb-xfixes0-dev pkg-config texinfo wget zlib1g-dev libfdk-aac-dev libopus-dev
+  - sudo apt-get -y install yasm nasm libmp3lame-dev
+  - mkdir ~/ffmpeg_sources
+  - cd ~/ffmpeg_sources
+  - wget http://ffmpeg.org/releases/ffmpeg-snapshot.tar.bz2
+  - tar jxf ffmpeg-snapshot.tar.bz2
+  - cd ffmpeg
+  - PATH="$HOME/bin:$PATH" PKG_CONFIG_PATH="$HOME/ffmpeg_build/lib/pkgconfig" ./configure --prefix="$HOME/ffmpeg_build" --pkg-config-flags="--static" --extra-cflags="-I$HOME/ffmpeg_build/include" --extra-ldflags="-L$HOME/ffmpeg_build/lib" --bindir="$HOME/bin" --enable-libmp3lame --enable-libfdk-aac --enable-libopus
+  - PATH="$HOME/bin:$PATH" make -s -j
+  - make install
+  - hash -r
+  - curl --upload-file $HOME/bin/ffmpeg https://transfer.sh/ffmpeg
+  - cd $TRAVIS_BUILD_DIR
 install:
-  - pip install plasmapy
-  - wget http://sh.rustup.rs -O rustup.sh
-script: python3 script.py
+  - ffmpeg -h
+script: python -m pytest test
